<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Droid Chatty</string>
    <string name="main_no_items">No threads to display</string>
    <string name="refresh">Refresh</string>
    <string name="copy_url">Copy URL</string>
    <string name="new_post">New Post</string>
    <string name="cancel">Cancel</string>
    <string name="reply">Reply</string>
    <string name="post">Post</string>
    <string name="reply_text_hint">Type your pointless drivel in here</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="search_hint">Search all chatty posts</string>
    <string name="tag">LOL</string>
    <string name="mod">Mod</string>
    
    <string name="loading">Loading&#8230;</string>
    
    <!--  search form -->
    <string name="me">Me</string>
    <string name="searchLabel">Text:</string>
    <string name="authorLabel">Author:</string>
    <string name="parentAuthorLabel">Parent Author:</string>
    
    <string name="upload_picture">Upload picture</string>
    <string name="take_picture">Take picture</string>
    
    <string name="preferences_login">Account Information</string>
    <string name="preference_username_title">Username</string>
    <string name="preference_username_summary">Shacknews.com username</string>
    <string name="preference_password_title">Password</string>
    <string name="preference_password_summary">Shacknews.com password</string>
    
    <string name="preferences_chattypics_login">Chattypics Account Information</string>
    <string name="preference_chattypics_username_summary">Chattypics username</string>
    <string name="preference_chattypics_password_summary">Chattypics password</string>
    
    <string name="preferences_options">Options</string>
    <string name="preference_tag_thread_list_title">Show tags in thread list</string>
    <string name="preference_tag_thread_list_summary"></string>
    
    <string name="preference_strip_newlines_thread_list_title">Strip newlines</string>
    <string name="preference_strip_newlines_thread_list_summary">Strip newlines from thread list previews</string>
    
    <string name="preference_preview_line_count_title">Preview line count</string>
    <string name="preference_preview_line_count_summary">Number of lines to display in thread previews.</string>
    
    <string name="preference_use_volume_buttons_title">Use volume buttons</string>
    <string name="preference_use_volume_buttons_summary">Scroll replies using volume buttons</string>
    
    <string name="preference_show_mod_tools_title">Show mod tools</string>
    <string name="preference_show_mod_tools_summary"></string>
    
</resources>
