<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/preferences_login">
  	<EditTextPreference
  	     android:key="userName"
  	     android:title="@string/preference_username_title"
  	     android:summary="@string/preference_username_summary"
  	     android:singleLine="true"/>
  	<EditTextPreference
  	     android:key="password"
  	     android:title="@string/preference_password_title"
  	     android:summary="@string/preference_password_summary"
  	     android:singleLine="true"
  	     android:password="true"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/preferences_chattypics_login">
  	<EditTextPreference
  	     android:key="chattyPicsUserName"
  	     android:title="@string/preference_username_title"
  	     android:summary="@string/preference_chattypics_username_summary"
  	     android:singleLine="true"/>
  	<EditTextPreference
  	     android:key="chattyPicsPassword"
  	     android:title="@string/preference_password_title"
  	     android:summary="@string/preference_chattypics_password_summary"
  	     android:singleLine="true"
  	     android:password="true"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/preferences_options">
  	<CheckBoxPreference
  	     android:key="showTagsInThreadList"
  	     android:title="@string/preference_tag_thread_list_title"
  	     android:summary="@string/preference_tag_thread_list_summary"
  	     android:defaultValue="true"
  	     />
  </PreferenceCategory>
</PreferenceScreen>
