<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/refreshThread"
		  android:icon="@drawable/ic_menu_refresh"
		  android:title="@string/refresh" />
	<item android:id="@+id/reply"
		  android:icon="@drawable/ic_menu_start_conversation"
		  android:title="@string/reply" />
	<item android:id="@+id/tagMenu"
		  android:icon="@drawable/ic_menu_tag"
		  android:title="@string/tag">
		  <menu>
		  	<item android:id="@+id/lol" android:title="lol" />
		  	<item android:id="@+id/inf" android:title="inf" />
		  	<item android:id="@+id/unf" android:title="unf" />
		  	<item android:id="@+id/tag" android:title="tag" />
		  	<item android:id="@+id/wtf" android:title="wtf" />
		  </menu>
	</item>
	<item android:id="@+id/modToolsMenu"
		  android:icon="@drawable/ic_menu_manage"
		  android:title="@string/mod"
		  android:visible="false">
		  <menu>
		  	<item android:id="@+id/mod_interesting" android:title="interesting" />
		  	<item android:id="@+id/mod_nws" android:title="nws" />
		  	<item android:id="@+id/mod_stupid" android:title="stupid" />
		  	<item android:id="@+id/mod_tangent" android:title="tangent" />
		  	<item android:id="@+id/mod_ontopic" android:title="ontopic" />
		  	<item android:id="@+id/mod_nuked" android:title="nuked" />
		  	<item android:id="@+id/mod_political" android:title="political" />
		  </menu>
	</item>
</menu>