<?xml version="1.0" encoding="utf-8"?>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:stretchColumns="0"
  android:shrinkColumns="1"
  >
  <TableRow>
	  <TextView
	  	android:id="@+id/searchLabel"
	  	android:layout_height="wrap_content"
	  	android:layout_width="wrap_content"
	  	android:text="@string/searchLabel" />
	  </TableRow>
  <TableRow>
	  <EditText
	  	android:id="@+id/searchTerm"
	  	android:layout_height="wrap_content"
	  	android:layout_width="fill_parent"
	  	android:inputType="text"
	  	/>
	  <Button
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:text="@string/me"
	    android:onClick="vanitySearch"
	   />
  </TableRow>
  <TableRow>
	  <TextView
	    android:id="@+id/searchAuthorLabel"
	  	android:layout_height="wrap_content"
	  	android:layout_width="wrap_content"
	  	android:text="@string/authorLabel"
	  	 />
  </TableRow>
  <TableRow>
	  <EditText
	  	android:id="@+id/searchAuthor"
	  	android:layout_height="wrap_content"
	  	android:layout_width="fill_parent"
	  	android:inputType="text"
	  	/>
	  <Button
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:text="@string/me"
	    android:onClick="ownSearch"
	   />
  </TableRow>
  <TableRow>
	  <TextView
	  	android:id="@+id/searchParentAuthorLabel"
	  	android:layout_height="wrap_content"
	  	android:layout_width="wrap_content"
	  	android:text="@string/parentAuthorLabel"
	  	 />
  </TableRow>
  <TableRow>
	  <EditText
	  	android:id="@+id/searchParentAuthor"
	  	android:layout_height="wrap_content"
	  	android:layout_width="fill_parent"
	  	android:inputType="text"
	  	/>
	  <Button
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:text="@string/me"
	    android:onClick="parentSearch"
	   />
  </TableRow>
  <TableRow>
  <Button
  	android:id="@+id/search"
  	android:layout_height="wrap_content"
  	android:layout_width="wrap_content"
  	android:text="@string/search"
  />
  </TableRow>
</TableLayout>
